# beancount-lima

./: .dir-locals.el  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  import-tests.elv  justfile  run-import-tests
beancount-lima/: Cargo.toml
beancount-lima-booking/: Cargo.toml
beancount-lima-booking/src/: book.rs  categorize.rs  error.rs  errors.rs  features.rs  internal_types.rs  interpolate.rs  lib.rs  lima_parser_types.rs  public_types.rs  reductions.rs  rust_decimal.rs  tests.rs  types.rs
beancount-lima-booking/src/features/: lima_parser_types.rs  rust_decimal.rs
beancount-lima-booking/src/tests/: helpers.rs
beancount-lima-booking/tests/: booking_full_test.rs
beancount-lima/src/: bridge.rs  config.rs  count.rs  format.rs  loader.rs  main.rs  prism.rs
beancount-lima/src/bridge/: conversions.rs
beancount-lima/src/count/: beancount.rs
beancount-lima/src/format/: edn.rs
beancount-lima/src/import/: csv.rs  mod.rs
beancount-lima/src/import/ofx/: mod.rs  ofx1.rs
beancount-lima/src/loader/: balancing.rs  types.rs  util.rs
beancount-lima/src/loader/balancing/: tests.rs
beancount-lima/src/loader/types/: tests.rs
beancount-lima/src/options/: defaults.rs
beancount-lima/src/prism/: args.rs  booking.rs  format.rs  inventory.rs  tabulate.rs  types.rs
beancount-lima/src/prism/types/: common.rs  core.rs  directives.rs  element.rs
beancount-lima/src/tests/: beancount_tests.rs  cog_tests.rs  mod.rs
beancount-lima/tests/beancount/: auto-posting.beancount  pad.beancount  price.beancount  price.scm
beancount-lima/tests/cogs/: base-config.scm
beancount-lima/tests/cogs/import/: pairing.scm
clj/: build.clj  deps.edn
clj/lima/: README.md
clj/lima/test/lima/: lima_test.clj
clj/src/lima/: core.clj  cumulate.clj  inventory.clj  lima.clj  main.clj  pod.clj  pp.clj
clj/src/lima/adapter/: count.clj  tabulate.clj
clj/src/lima/core/: count.clj  inventory.clj
clj/test/lima/: lima_test.clj
cogs/: balances.scm  ledger.scm
cogs/examples/: tax-year.scm
cogs/lima/: account.scm  alist.scm  base-config.scm  config.scm  ffi.scm  fiscal-year.scm  flatmap.scm  import.scm  ledger.scm  list.scm  posting.scm  prelude.scm  stdlib.scm  tabulate.scm  types.scm
cogs/lima/count/: balances.scm  prelude.scm
cogs/lima/import/: account-inference.scm  dedupe.scm  default.scm  display.scm  extract.scm  ffi.scm  first-direct.scm  globals.scm  importer.scm  ofx1.scm  pairing.scm  prelude.scm  types.scm
cogs/lima/lib/: account.scm  alist.scm  balances.scm  base-config.scm  errors.scm  ffi.scm  filters.scm  fiscal-year.scm  globals.scm  inventory.scm  ledger.scm  list.scm  posting.scm  prelude.scm  reducers.scm  rollup.scm  stdlib.scm  string.scm  tabulate.scm  types.scm  vector.scm
cogs/lima/lib/import/: account-inference.scm  cmd.scm  dedupe.scm  extract.scm  ffi.scm  firstdirect.scm  format.scm  globals.scm  importer.scm  ofx1.kiwibank.scm  ofx1.scm  pairing.scm  prelude.scm  types.scm
cogs/lima/reports/: assets.scm  directives.scm
cogs/lima/tests/: assertions.scm  posting.scm  stdlib.scm  types.scm
cogs/srfi/srfi-1/: list.scm  srfi-1.scm
cogs/srfi/srfi-227/: opt-lambda.scm
cogs/srfi/srfi-8/: receive.scm
doc/: import.md
examples/beancount/: full.beancount  price.beancount  simple.beancount  trading.beancount
examples/cogs/: balance.scm
examples/cogs/lima/: config.scm
examples/data/: auto-posting.beancount  full.beancount  simple.beancount
examples/import/: kiwibank.beancount
examples/import/csv/: first-direct.csv
examples/import/pairing/: pairing.beancount
examples/ofx/: kiwibank.beancount  kiwibank.ofx  kiwibank.stripped.ofx
rust/beancount-lima/: Cargo.toml
rust/beancount-lima-booking/src/: book.rs
rust/beancount-lima/src/: book.rs  count.rs  digest.rs  format.rs  import.rs  main.rs
rust/beancount-lima/src/format/: beancount.rs  edn.rs
src/: args.rs  balancing.rs  booking.rs  bridge.rs  cli_options.rs  config.rs  custom_wrapper.rs  format.rs  import.rs  inventory.rs  ledger.rs  loader.rs  main.rs  options.rs  prism.rs  shared.rs  steel_decimal.rs  steely.rs  tabulate.rs  types.rs
src/balancing/: tests.rs
src/bridge/: conversions.rs
src/import/: context.rs  csv.rs  mod.rs  ofx.rs
src/import/ofx/: mod.rs  ofx1.rs
src/loader/: balancing.rs  booking.rs  types.rs
src/loader/balancing/: tests.rs
src/loader/booking/: categorize.rs
src/loader/types/: tests.rs
src/prism/: booking.rs  format.rs  inventory.rs  tabulate.rs
src/prism/types/: common.rs  directives.rs  element.rs  steel_decimal.rs
src/tests/: beancount_tests.rs  cog_tests.rs  mod.rs
src/types/: common.rs  directives.rs  element.rs  steel_date.rs  steel_decimal.rs
steel-lsp/: globals.scm
tests/: auto-posting-tests.scm  auto-posting.scm
tests/beancount/: auto-posting.scm  pad.scm
tests/cogs/: account.scm  alist.scm  base-config.scm  ledger.scm  list.scm  posting.scm  types.scm  vector.scm
tests/cogs/import/: pairing.scm
tests/import/: firstdirect.beancount  firstdirect.expected.beancount  kiwibank.expected.beancount  pairing.expected.beancount
tests/import.config/lima/: config.scm
tests/import/default/: kiwibank.expected.beancount
tests/import/first-direct/: pairing.expected.beancount
tests/import/pairing/: pairing-21.ofx
(+7 files in other folders)
