[package]
name = "beancount-lima"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount frontend using Steel Scheme and Lima parser"
homepage = "https://github.com/tesujimath/beancount-lima"
repository = "https://github.com/tesujimath/beancount-lima"
readme = "README.md"

[[bin]]
name = "lima"
path = "src/main.rs"

[dependencies]
beancount-lima-booking = { path = "../beancount-lima-booking", features = [
  "lima-parser-types",
  "rust-decimal",
] }
abi_stable = "0.11.3"
beancount-parser-lima = { workspace = true }
# steel-core = "0.7.0"
# steel-repl = "0.7.0"
# steel-derive = "0.6.0"
steel-core = { git = "https://github.com/mattwparas/steel" }
steel-repl = { git = "https://github.com/mattwparas/steel" }
steel-derive = { git = "https://github.com/mattwparas/steel" }
# steel-core = { git = "https://github.com/tesujimath/steel", branch = "vector-derive-debug" }
# steel-repl = { git = "https://github.com/tesujimath/steel", branch = "vector-derive-debug" }
# steel-derive = { git = "https://github.com/tesujimath/steel", branch = "vector-derive-debug" }
# steel-core = { path = "../../third-party/steel/crates/steel-core" }
# steel-repl = { path = "../../third-party/steel/crates/steel-repl" }
# steel-derive = { path = "../../third-party/steel/crates/steel-derive" }
rust_decimal = { workspace = true }
hashbrown = { workspace = true }
time = { workspace = true, features = ["local-offset", "parsing"] }
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
slugify = "0.1.0"
sgmlish = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
xdg = "3.0.0"
regex = "1.11.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = "0.6.5"
strum = "0.27.2"
strum_macros = { workspace = true }
joinery = "3.1.0"
tabulator = { version = "0.4.0", features = ["num-bigint", "rust_decimal"] }
# tabulator = { path = "../../tabulator-rs", features = [
#   "num-bigint",
#   "rust_decimal",
# ] }

[dev-dependencies]
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
speculoos = "0.13.0"
time = { version = "0.3.41", features = ["macros"] }

[build-dependencies]
build-deps = "0.1.4"
